@@ -3,37 +3,26 @@ package game.element;
 import game.element.character.Pig;
 
 import java.awt.Point;
-import java.util.LinkedList;
+import java.util.ArrayList;
 import java.util.Observable;
 
 public class ListElements extends Observable {
 	
-	private static int size = 0;
-	public static final int MAX_SIZE = 20;
-	
-	private LinkedList<Element> list;
+	private ArrayList<Element> list;
 	
 	public ListElements() {
-		this.list = new LinkedList<>();
+		this.list = new ArrayList<>();
+	}
+	
+	public ListElements(int size) {
+		this.list = new ArrayList<>(size);
 	}
 	
 	public void add(Element element) {
-		if (size < MAX_SIZE) {
-			if (element instanceof Pig) {
-				if (!this.list.isEmpty() && this.list.getFirst() instanceof Pig) {
-					//TODO Throw exception
-				} else {
-					this.list.addFirst(element);
-					size++;
-				}
-			} else {
-				this.list.add(element);
-				size++;
-			}
-			
-			setChanged();
-			notifyObservers();
-		}
+		this.list.add(element);
+		
+		setChanged();
+		notifyObservers();
 	}
 	
 	public void remove(Element element) {
@@ -68,7 +57,7 @@ public class ListElements extends Observable {
 	}
 	
 	public Pig getPig() {
-		return (Pig) this.list.getFirst();
+		return (Pig) this.list.get(0);
 	}
 	
 	public int size() {
